記事のクエリ+ドメイン修正